# Vectra_Backend

./: .dockerignore  .env.captain-user-lookup.example  .env.example  .gitattributes  .gitignore  .socraticode.json  .socraticodeignore  AGENTS.md  Caddyfile  Dockerfile  README.md  RTK.md  bug_report.md  docker-compose.ghcr.yml  docker-compose.loadtest.override.yml  docker-compose.local-validation.yml  docker-compose.prod.yml  docker-compose.yml  marzban_proxy_guide.md  pyproject.toml  requirements.txt  test.json  test_statistics.py
bloobcat/: __main__.py  build_info.py  clients.py  logger.py  misc.py  online.py  remnawave_online.py  scheduler.py  settings.py  test_notifications.py  testdata.py
cyberdog/: __init__.py  __main__.py  clients.py  config.py  logger.py  misc.py  online.py  settings.py
directus/: README.md
docs/: admin_test_notifications.md  directus_migration_checklist.md  new_pricing_system.md  prize_wheel_and_promo_examples.md  progressive_pricing_system.md
memory-base/: admin-migration-notes.md  deploy-checklist.md  deploy-pipeline-roadmap.md  deploy-troubleshooting.md  directus-admin-guide.md  directus-admin-migration.md  directus-demo-seed.md  directus-integration-setup.md  directus-inventory.md  directus-parity.md  directus-post-setup.md  directus-schema-map.md  directus-ui-ux-setup.md  log.md  remnawave-api-review.md  testing-notes.md
scripts/: apply_migrations.py  audit_overlay_integrity.py  backfill_acquisition_utm.py  backfill_partner_earnings.py  backfill_referral_gamification.py  backfill_referral_reward.py  backfill_trial_early_bird_max_months.py  check_migration_prefixes.py  check_migration_safety.py  cleanup_remnawave_orphans.py  db_growth_notify.py  db_growth_report.py  diagnose_directus_dashboards.py  directus_admin_permissions.py  directus_insights_permissions.py  directus_insights_setup.py  directus_post_setup.py  directus_set_language_ru.py  directus_super_setup.py  directus_translate_fields_ru.py  directus_ui_tune.py  directus_ui_ux_rollback.py  directus_ui_ux_stepwise.py  directus_ui_ux_upgrade.py  migrate_admins_to_directus.py  reconcile_service_growth_analytics.py  repair_home_screen_orphans.py  seed_directus_demo.py  seed_directus_timeseries.py  seed_segment_campaigns.py  seed_tariffs.py  self_heal_runtime_state.py  verify_runtime_state.py
tests/: _payment_test_stubs.py  _sqlite_datetime_compat.py  conftest.py  test_acquisition_inheritance.py  test_admin_broadcast_caption_validation.py  test_admin_integration_delete_retry.py  test_admin_integration_hwid_purge.py  test_admin_integration_send_message.py  test_admin_notifications_log_channel.py  test_admin_utm_generator.py  test_app_info.py  test_auth_merge_planner.py  test_auth_registration_modes.py  test_backfill_acquisition_utm_cycle.py  test_bot_legal_documents.py  test_cashback_review.py  test_compat_patches_complete.py  test_connections_process.py  test_cors_origin_validation.py  test_device_per_user_foundation.py  test_devices_topup_atomic.py  test_directus_postgres_reliability_artifacts.py  (+66 more)
(+468 files in other folders)
