[tool.aerich]
tortoise_orm = "clients.TORTOISE_ORM"
location = "./migrations"
src_folder = "./bloobcat"

[tool.poetry]
name = "bloobcat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
aiogram = "^3.12.0"
fastapi = "^0.112.2"
httpx = "^0.27.2"
aerich = "^0.7.2"
apscheduler = "^3.10.4"
tortoise-orm = "^0.21.6"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
fastadmin = {extras = ["fastapi", "tortoise-orm"], version = "^0.2.13"}
bcrypt = "^4.2.0"
websockets = "^14.2"
yookassa = "^2.5.0"
loguru = "^0.7.2"
pydantic = { extras = ["email"], version = "^2.0" }
langdetect = "^1.0.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
