[tool.aerich]
tortoise_orm = "clients.TORTOISE_ORM"
location = "./migrations"
src_folder = "./bloobcat"

[tool.poetry]
name = "bloobcat"
version = "1.33.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pydantic-settings = "^2.14.0"
aiogram = "^3.27.0"
fastapi = "^0.136.1"
httpx = "^0.28.1"
aerich = "^0.9.2"
apscheduler = "^3.10.4"
tortoise-orm = "^0.25.4"
uvicorn = "^0.46.0"
asyncpg = "^0.31.0"
bcrypt = "^4.3.0"
pyjwt = {extras = ["crypto"], version = "^2.12.1"}
websockets = "^16.0"
yookassa = "^2.5.0"
loguru = "^0.7.2"
pydantic = {version = "^2.12.5", extras = ["email"]}
redis = "^4.6.0"
aiohttp = "^3.13.5"
aiosqlite = "^0.22.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
