[tool.aerich]
tortoise_orm = "clients.TORTOISE_ORM"
location = "./migrations"
src_folder = "./bloobcat"

[tool.poetry]
name = "bloobcat"
version = "1.89.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pydantic-settings = "^2.14.0"
aiogram = "^3.27.0"
fastapi = "^0.136.1"
httpx = "^0.28.1"
aerich = "^0.9.2"
apscheduler = "^3.10.4"
tortoise-orm = "^0.25.4"
uvicorn = "^0.46.0"
asyncpg = "^0.31.0"
bcrypt = "^4.3.0"
pyjwt = {extras = ["crypto"], version = "^2.12.1"}
websockets = "^16.0"
yookassa = "^2.5.0"
loguru = "^0.7.2"
pydantic = {version = "^2.12.5", extras = ["email"]}
redis = "^4.6.0"
aiohttp = "^3.13.5"
aiosqlite = "^0.22.1"
# Pinned as a direct dep so `poetry update` / future regenerations of
# requirements.txt never regress to the pre-CVE-2026-44431/44432 version.
urllib3 = "^2.7.0"
# Story-share image renderer — Pillow 12 has the latest wheels for Python 3.12
# and aligns with the version baked into our requirements.txt lock.
Pillow = "^12.0.0"
# Web Push (PWA) delivery — VAPID-signed messages to browsers via push services.
# Brings in `cryptography`, `http-ece`, `py-vapid`.
pywebpush = "^2.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
